--- a/reloj/src/index.html
+++ b/reloj/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>Angular QuickStart</title>
     <base href="/">
     <meta charset="UTF-8">
@@ -15,11 +15,13 @@
 
     <script src="systemjs.config.js"></script>
     <script>
-      System.import('main.js').catch(function(err){ console.error(err); });
+        System.import('main.js').catch(function(err){ console.error(err); });
     </script>
-  </head>
+</head>
 
-  <body>
-    <my-app>Loading AppComponent content here ...</my-app>
-  </body>
+<body>
+    <reloj-digital>Loading AppComponent content here ...</reloj-digital>
+    <br><br>
+    <reloj-analogico>Loading the analogue clock here...</reloj-analogico>
+</body> 
 </html>
